# sqlalchemy-workshop

./: .gitignore  01-sync_tasks.py  02-async_tasks.py  03-scheduling_tasks.py  04-task_groups.py  05-async_for.py  06-customers_shops.py  LICENSE  README.md  pyproject.toml  requirements.txt  ruff.toml  run.sh
marketsvc/: db_accessor.py  server.py
marketsvc/db/: address.py  base.py  customer.py  init_db.py  init_db.sql  item.py  order_items.py  orders.py
