[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace"
description = "Marketplace - an example of SQLAlchemy tutorial"
version = "0.0.1"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  { name = "Aya Elsayed", email = "ayah.ehab11@gmail.com" },
  { name = "Rhythm Patel", email = "rhythmkumar18083@iiitd.ac.in" },
]
dependencies = []

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
where = ["marketsvc"]
